Source/WebCore/dom/ElementAttributeData.h
@@ -3,7 +3,7 @@
  *           (C) 1999 Antti Koivisto (koivisto@kde.org)
  *           (C) 2001 Peter Kelly (pmk@post.com)
  *           (C) 2001 Dirk Mueller (mueller@kde.org)
- * Copyright (C) 2003, 2004, 2005, 2006, 2008, 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2003, 2004, 2005, 2006, 2008, 2010, 2012 Apple Inc. All rights reserved.
  * Copyright (C) 2012 Nokia Corporation and/or its subsidiary(-ies).
  *
  * This library is free software; you can redistribute it and/or
@@ -101,6 +101,8 @@ protected:
         , m_arraySize(arraySize)
     { }
 
+    ElementAttributeData(const ElementAttributeData&, bool isMutable);
+
     unsigned m_isMutable : 1;
     unsigned m_arraySize : 31;
 
@@ -118,10 +120,9 @@ private:
     Attribute* getAttributeItem(const AtomicString& name, bool shouldIgnoreAttributeCase);
     const Attribute* getAttributeItem(const AtomicString& name, bool shouldIgnoreAttributeCase) const;
     size_t getAttributeItemIndexSlowCase(const AtomicString& name, bool shouldIgnoreAttributeCase) const;
-    void cloneDataFrom(const ElementAttributeData& sourceData, const Element& sourceElement, Element& targetElement);
-    void clearAttributes();
 
     PassRefPtr<ElementAttributeData> makeMutableCopy() const;
+    PassRefPtr<ElementAttributeData> makeImmutableCopy() const;
 
     Vector<Attribute, 4>& mutableAttributeVector();
     const Vector<Attribute, 4>& mutableAttributeVector() const;
@@ -130,6 +131,7 @@ private:
 class ImmutableElementAttributeData : public ElementAttributeData {
 public:
     ImmutableElementAttributeData(const Vector<Attribute>&);
+    ImmutableElementAttributeData(const MutableElementAttributeData&);
     ~ImmutableElementAttributeData();
 
     void* m_attributeArray;
@@ -139,6 +141,7 @@ class MutableElementAttributeData : public ElementAttributeData {
 public:
     MutableElementAttributeData() { }
     MutableElementAttributeData(const ImmutableElementAttributeData&);
+    MutableElementAttributeData(const MutableElementAttributeData&);
 
     Vector<Attribute, 4> m_attributeVector;
 };
